compile/files/tmp_1553247862.1.Compile_error
./files/tmp_1553247862.1.cpp: In function ‘int main()’:
./files/tmp_1553247862.1.cpp:4:8: error: ‘fork’ was not declared in this scope
   fork();
        ^
